@@ -25,7 +25,11 @@ python-apt (0.7.92) UNRELEASED; urgency=low
   * Unification of dependency handling:
     - apt_pkg.parse_[src_]depends() now use CompType instead of CompTypeDeb
       (i.e. < instead of <<) to match the interface of Version.depends_list_str
-
+    - apt_pkg.SourceRecords.build_depends matches exactly the interface of
+      Version.depends_list_str just with different keys (e.g. Build-Depends).
+      + Closes: #468123 - there is no need anymore for binding CompType or
+        CompTypeDeb, because we don't return integer values for CompType
+        anymore.
 
   [ Sebastian Heinlein ]
   * apt/progress.py: Extract the package name from the status message
